Fix z-index leaflet & topMenu issue

--- a/src/components/Header/TopMenu.module.scss
+++ b/src/components/Header/TopMenu.module.scss
@@ -19,7 +19,7 @@
   text-transform: uppercase;
   border-bottom: 1px solid $color-6;
   color: $color-4;
-  z-index: 1000;
+  z-index: 1001;
   background-color: $top-menu-bg-color;
 
   .topMenuItem {
